--- a/home/experience.html
+++ b/home/experience.html
@@ -7,10 +7,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" />
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="study.css">
-    <link rel="stylesheet" href="navbar.css">
-    <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="/assets/css/styles.css">
+    <link rel="stylesheet" href="/assets/css/study.css">
+    <link rel="stylesheet" href="/assets/css/fragments/navbar.css">
+    <link rel="stylesheet" href="/assets/css/fragments/footer.css">
     <link rel="stylesheet" href="/assets/css/loading-animation.css">
 </head>
 <body class="page-transition page-bottom">
@@ -102,10 +102,10 @@
 <div id="footer-container"></div>
 
 <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
-<script src="scripts.js"></script>
-<script src="study.js"></script>
-<script src="navbar.js"></script>
-<script src="footer.js"></script>
+<script src="/assets/js/scripts.js"></script>
+<script src="/assets/js/study.js"></script>
+<script src="/assets/js/fragments/navbar.js"></script>
+<script src="/assets/js/fragments/footer.js"></script>
 <script src="/assets/js/loading-animation.js"></script>
 </body>
 </html>
